Update localization support for Dreame vacuum tiles

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -221,6 +221,27 @@
         },
         "mop_pad_humidity": {
             "label": "Mop pad"
+        },
+        "cleaning_mode": {
+          "label": "Cleaning mode"
+        },
+        "tight_mopping": {
+          "label": "Tight mopping"
+        },
+        "wetness_level": {
+          "label": "Mop wetness"
+        },
+        "mop_wash_level": {
+          "label": "Mop washing"
+        },
+        "auto_empty_mode": {
+          "label": "Auto empty mode"
+        },
+        "cleaning_route": {
+          "label": "Cleaning route"
+        },
+        "cleangenius": {
+          "label": "CleanGenius"
         }
     },
     "icon": {
