--- a/src/localize/languages/fr.json
+++ b/src/localize/languages/fr.json
@@ -185,11 +185,55 @@
         "cleaned_area": {
             "label": "Surface nettoyée"
         },
+        "total_cleaned_area": {
+          "label": "Surface total nettoyée"
+        },
         "cleaning_time": {
             "label": "Durée de nettoyage"
         },
         "mop_left": {
             "label": "Serpillère"
+        },
+        "bin_full": {
+          "label": "Bac plein",
+          "value": {
+            "true": "Oui",
+            "false": "Non"
+          }
+        },
+        "bin_present": {
+          "label": "Bac présent",
+          "value": {
+            "true": "Oui",
+            "false": "Non"
+          }
+        },
+        "water_volume": {
+          "label": "Volume d'eau"
+        },
+        "mop_pad_humidity": {
+          "label": "Humidité de la serpillière"
+        },
+        "cleaning_mode": {
+          "label": "Mode de nettoyage"
+        },
+        "tight_mopping": {
+          "label": "Nettoyage serré"
+        },
+        "wetness_level": {
+          "label": "Humidité de la serpillière"
+        },
+        "mop_wash_level": {
+          "label": "Lavage des serpillières"
+        },
+        "auto_empty_mode": {
+          "label": "Vidage automatique"
+        },
+        "cleaning_route": {
+          "label": "Trajectoire"
+        },
+        "cleangenius": {
+          "label": "CleanGenius"
         }
     },
     "icon": {
